Closed
Bug 316412
Opened 20 years ago
Closed 20 years ago
Camino build fails, gcc 4.0.1 (xcode 2.2)
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: mark, Assigned: mark)
References
Details
(Keywords: fixed1.8)
Attachments
(1 file, 1 obsolete file)
|
1.34 KB,
patch
|
sfraser_bugs
:
review-
|
Details | Diff | Splinter Review |
CompileC build/Camino.build/Deployment/CaminoStatic.build/Objects-normal/ppc/CertificatesWindowController.o/lizard/trunk/build/camino/camino/src/security/CertificatesWindowController.mm normal ppc objective-c++ com.apple.compilers.gcc.4_0
[...]
/lizard/trunk/build/camino/camino/src/security/CertificatesWindowController.mm:521:2: warning: #warning fix for plurals
../dist/include/pipnss/nsITokenPasswordDialogs.h:50: error: expected unqualified -id before 'template'
| Assignee | ||
Comment 1•20 years ago
|
||
Either do this or get rid of the "testing" stuff altogether.
Attachment #202997 -
Flags: review?(sfraser_bugs)
| Assignee | ||
Comment 2•20 years ago
|
||
*** Bug 316411 has been marked as a duplicate of this bug. ***
Comment 3•20 years ago
|
||
That method is unused; we should just remove it.
| Assignee | ||
Comment 4•20 years ago
|
||
Attachment #202997 -
Attachment is obsolete: true
Attachment #203011 -
Flags: review?(sfraser_bugs)
Attachment #202997 -
Flags: review?(sfraser_bugs)
Comment 5•20 years ago
|
||
Still broken for me with the following error,
/Users/graeme/dev/camino/darwin8.3.0/mozilla/camino/src/preferences/PreferenceManager.mm:82: error: expected initializer before '__builtin___CFStringMakeConstantString'
** BUILD FAILED **
make[4]: *** [libs] Error 1
make[3]: *** [libs_tier_99] Error 2
make[2]: *** [tier_99] Error 2
make[1]: *** [default] Error 2
make: *** [build] Error 2
Removing lines 78-84 in PreferenceManager.mm results in a successful build.
Comment 6•20 years ago
|
||
Comment on attachment 203011 [details] [diff] [review]
Get rid of unused code
You missed the header :)
Attachment #203011 -
Flags: review?(sfraser_bugs) → review-
| Assignee | ||
Comment 7•20 years ago
|
||
Checked in with header fix.
I've also done something for comment 5.
| Assignee | ||
Updated•20 years ago
|
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•