Bug 316412, Camino build fails, gcc 4.0.1/xcode 2.2.  Remove unused code.  Camino-only, npotdb.